package net.ent.etrs.ggef.vue.ihm.referencies;

public enum TypeAlignement {
    RIGHT,
    LEFT,
    JUSTIFY,
    CENTER
}
