package net.ent.etrs.rnbm.view.ihm.commons.references.enumerateds;

public enum Menu {
}
