package net.ent.etrs.view.ihm;

public enum TypeIhm {
    CONSOLE, JPANEL;
}
